Fix: Correct alignment of footer logo

--- a/style/style.css
+++ b/style/style.css
@@ -288,7 +288,7 @@ img {
   display: flex;
   flex-direction: row;
   justify-content: space-between;
-  align-items: flex-start;
+  align-items: center;
   padding: 55px;
   gap: 15px;
   font-size: 18px;
